refactor(测试用例): 优化模块操作日志